# code

./: .gitmodules  CMakeLists.txt  Makefile  clang-format.py  main.cpp
Source/: SoftwareRenderer.h  buffer.cpp  buffer.h  color.h  config.h  geometry.h  log.h  texture.cpp  texture.h  tools.h
chapters/01-color/: gradient-color.cpp  single-color.cpp
chapters/02-line/: line.cpp
src/: SoftwareRenderer.h  buffer.cpp  buffer.h  color.h  config.h  geometry.h  log.h  texture.cpp  texture.h  tools.h  utility.h  vec.h
